--- a/index.html
+++ b/index.html
@@ -20,24 +20,35 @@
         <div class="container-links">
                 <h2>My Projects 🚀</h2>
                 <div class="personal-projects-links">
-                    <a class="boton-links" href="https://codepen.io/francomoreira/pen/QWmdvoE">Switch - Light & Dark</a>
-                    <a class="boton-links" href="https://francomoreira-35731.netlify.app/">Calculate your weight</a>
-                    <a class="boton-links" href="https://calculate-delay-time.netlify.app/">Delay tempo calculator</a>
-                    <a class="boton-links" href="#">Example</a>
-                    <a class="boton-links" href="#">Example</a>
+                    <a class="boton-links" href="https://codepen.io/francomoreira/pen/QWmdvoE"><strong>Switch - Light & Dark</strong></a>
+                    <a class="boton-links" href="https://francomoreira-35731.netlify.app/"><strong>Calculate your weight</strong></a>
+                    <a class="boton-links" href="https://calculate-delay-time.netlify.app/"><strong>Delay tempo calculator</strong></a>
+                    <!-- <a class="boton-links" href="#"><strong>exampler</stronge></a>
+                    <a class="boton-links" href="#"><strong>exampler</strong></a> -->
+                </div>
+                <h2>Courses & Certificates 🚀</h2>
+                <div class="link-education personal-projects-links">
+                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/1937-python/diploma/detalle/"><strong>Python: Básico</strong></a>                   
+                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/2195-visualizacion-datos/diploma/detalle/"><strong>Principios de DataViz para BI.</strong></a>
+                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/1566-bd/diploma/detalle/"><strong>Fundamentos de Bases de Datos</strong></a>
+                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/1925-excel/diploma/detalle/"><strong>Excel Básico</strong></a>
+                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/3156-etica-ia/diploma/detalle/"><strong>Ética y Manejo de Datos para Data Science e IA.</strong></a>
+                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/2359-business-intelligence/diploma/detalle/"><strong>Business Intelligence: Utilidad y Áreas de Oportunidad</strong></a>
+                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/2069-negocios-data-science/diploma/detalle/"><strong>Análisis de Negocios para Ciencia de Datos</strong></a>
+
+
+
                 </div>
             </div>
         </div>
     </div> 
     <div class="all-social-media">
-        <h3>My Social Media 🚀</h3>
             <div class="links-s-m">
-                <a href="https://twitter.com/franmore_dev"><img class="social-media-logo-1" src="./images/logos-social-media/icons8-old-twitter-logo.svg" alt="" width="45px"></a>
-                <a href="https://github.com/francomoreira"><img class="social-media-logo-2" src="./images/logos-social-media/icons8-github.svg" alt="" width="50px"></a> 
-                <a href="https://www.linkedin.com/in/francomoreira/"><img class="social-media-logo-3" src="./images/logos-social-media/icons8-linkedin.svg" alt="" width="40px"></a>
-                <a href="https://www.instagram.com/hidoggy.ar/"><img class="social-media-logo-4" src="./images/logos-social-media/icons8-instagram-old.svg"  width="50px"></a>
-                <a href="mailto:hidoggy.music@gmail.com" ><img class="social-media-logo-5" src="./images/logos-social-media/icons8-mail.svg" alt="" width="40px"></a>
-                <!-- <a target="_blank" rel="nofollow" href="https://icons8.com">Icons8</a> -->
+                <a href="https://twitter.com/franmore_dev"><img class="social-media-logo-1" src="./images/logos-social-media/twitter.svg" alt="" width="45px"></a>
+                <a href="https://github.com/francomoreira"><img class="social-media-logo-2" src="./images/logos-social-media/github.svg" alt="" width="50px"></a> 
+                <a href="https://www.linkedin.com/in/francomoreira/"><img class="social-media-logo-3" src="./images/logos-social-media/linkedin.svg" alt="" width="40px"></a>
+                <a href="https://www.instagram.com/hidoggy.ar/"><img class="social-media-logo-4" src="./images/logos-social-media/instagram.svg"  width="50px"></a>
+                <a href="mailto:hidoggy.music@gmail.com" ><img class="social-media-logo-5" src="./images/logos-social-media/mail.svg" alt="" width="40px"></a>
             </div>
     </div>
 </body>
