edit link curses

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div class="primaryBox">
         <div class="container-profile">
             <img id="profile-img" src="./images/franco-moreira-profile.jpg" alt="profile">
+            <h1><strong>Franco Moreira</strong></h1>
+            <p>Frontend Developer Jr.</p>
         </div>
 
         <div class="container-links">
@@ -27,16 +29,16 @@
                     <a class="boton-links" href="#"><strong>exampler</strong></a> -->
                 </div>
                 <h2>Courses & Certificates 🚀</h2>
-                <div class="link-education personal-projects-links">
-                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/1937-python/diploma/detalle/"><strong>Python: Básico</strong></a>                   
-                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/2195-visualizacion-datos/diploma/detalle/"><strong>Principios de DataViz para BI.</strong></a>
-                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/1566-bd/diploma/detalle/"><strong>Fundamentos de Bases de Datos</strong></a>
-                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/1925-excel/diploma/detalle/"><strong>Excel Básico</strong></a>
-                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/3156-etica-ia/diploma/detalle/"><strong>Ética y Manejo de Datos para Data Science e IA.</strong></a>
-                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/2359-business-intelligence/diploma/detalle/"><strong>Business Intelligence: Utilidad y Áreas de Oportunidad</strong></a>
-                    <a class="boton-links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/2069-negocios-data-science/diploma/detalle/"><strong>Análisis de Negocios para Ciencia de Datos</strong></a>
-
-
+                <div class="link-education">
+                    <ul>
+                        <li><a class="links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/1937-python/diploma/detalle/"><strong>Python: Básico</strong></a></li>               
+                        <li><a class="links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/2195-visualizacion-datos/diploma/detalle/"><strong>Principios de DataViz para BI.</strong></a>
+                        <li><a class="links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/1566-bd/diploma/detalle/"><strong>Fundamentos de Bases de Datos</strong></a></li>
+                        <li><a class="links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/1925-excel/diploma/detalle/"><strong>Excel Básico</strong></a></li>
+                        <li><a class="links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/3156-etica-ia/diploma/detalle/"><strong>Ética y Manejo de Datos para Data Science e IA.</strong></a></li>
+                        <li><a class="links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/2359-business-intelligence/diploma/detalle/"><strong>Business Intelligence: Utilidad y Áreas de Oportunidad</strong></a></li>
+                        <li><a class="links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/2069-negocios-data-science/diploma/detalle/"><strong>Análisis de Negocios para Ciencia de Datos</strong></a></li>
+                    </ul>
 
                 </div>
             </div>
