--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Franco Moreira</title>
     <link rel="stylesheet" href="./styles/syle.css">
+    <link rel="shortcut icon" href="./images/hidoggy-favicon.png" type="image/x-icon">
     <script src="./scripts/script.js"></script>
 </head>
 <body>
