update footer styles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="https://www.linkedin.com/in/francomoreira/"><img class="social-media-logo-3" src="./images/logos-social-media/linkedin.svg" alt="" width="40px"></a>
                 <a href="https://www.instagram.com/hidoggy.ar/"><img class="social-media-logo-4" src="./images/logos-social-media/instagram.svg"  width="50px"></a>
                 <a href="mailto:hidoggy.music@gmail.com" ><img class="social-media-logo-5" src="./images/logos-social-media/mail.svg" alt="" width="40px"></a>
-                <a href="https://www.freecodecamp.org/francomoreira"><img class="social-media-logo-4" src="./images/logos-social-media/fcodecamp-sm.jpg"  width="50px"></a>
+                <a href="https://www.freecodecamp.org/francomoreira"><img class="social-media-logo-6" src="./images/logos-social-media/fcodecamp-sm.jpg"></a>
             </div>
     </div>
 </body>
