color random act

--- a/projects/random-color/index.html
+++ b/projects/random-color/index.html
@@ -26,7 +26,7 @@
             <h2>Button Random Color 🚀</h2>
             <div class="random-color-box" id="random-color-box">
                 <div class=""></div>
-                <div class="resultado" id="resultado">#546488</div>
+                <div class="resultado" id="resultado">#e16162</div>
                 <div onclick="randomColor()" class="boton">Click Me!</div>
             </div>
             <p>*Click button for random colors</p>
