--- a/projects/random-color/index.html
+++ b/projects/random-color/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Franco Moreira</title>
     <link rel="stylesheet" href="./syle.css">
-    <link rel="shortcut icon" href="./images/hidoggy-favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/francomoreira/francomoreira.github.io/main/images/hidoggy-favicon.png" type="image/x-icon">
     <script src="./script.js"></script>
 </head>
 <body>
