--- a/projects/Palindrome-Checker/index.html
+++ b/projects/Palindrome-Checker/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindrome Checker</title>
     <link rel="stylesheet" href="./syle.css">
-    <link rel="shortcut icon" href="./images/hidoggy-favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/francomoreira/francomoreira.github.io/main/images/hidoggy-favicon.png" type="image/x-icon">
 </head>
 <body>
     <div class="primaryBox">
