--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container-links">
                 <h2>My Projects 🚀</h2>
                 <div class="personal-projects-links">
-                    <a class="boton-links" href="https://francomoreira.github.io/projects/Palindrome-Checker/"><strong>Palindrome Checker</stronge></a>
+                    <a class="boton-links" href="https://francomoreira.github.io/projects/Palindrome-Checker/"><strong>Palindrome Checker</strong></a>
                     <a class="boton-links" href="https://francomoreira.github.io/projects/random-color/"><strong>Random color - Button</strong></a>
                     <a class="boton-links" href="https://codepen.io/francomoreira/pen/QWmdvoE"><strong>Switch - Light & Dark</strong></a>
                     <a class="boton-links" href="https://francomoreira-35731.netlify.app/"><strong>Calculate your weight</strong></a>
