--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         </div>
 
         <div class="container-links">
-                <h2>My Projects 🚀</h2>
+                <h2>My Projects 🚀</h2> 
                 <div class="personal-projects-links">
+                    <a class="boton-links" href="https://francomoreira.github.io/projects/Descarga-miniaturas-youtube/"><strong>Youtube thumbnails downloader</strong></a>
                     <a class="boton-links" href="https://francomoreira.github.io/projects/drive-markdown/"><strong>Drive to Markdown</strong></a>
                     <a class="boton-links" href="https://francomoreira.github.io/projects/Palindrome-Checker/"><strong>Palindrome Checker</strong></a>
                     <a class="boton-links" href="https://francomoreira.github.io/projects/random-color/"><strong>Random color - Button</strong></a>
