--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container-links">
                 <h2>My Projects 🚀</h2> 
                 <div class="personal-projects-links">
-                    <a class="boton-links" href="https://francomoreira.github.io/projects/Descarga-miniaturas-youtube/"><strong>Youtube thumbnails downloader</strong></a>
+                    <a class="boton-links" href="https://francomoreira.github.io/projects/Descarga-miniaturas-youtube/"><strong>YT Thumbnails Downloader</strong></a>
                     <a class="boton-links" href="https://francomoreira.github.io/projects/drive-markdown/"><strong>Drive to Markdown</strong></a>
                     <a class="boton-links" href="https://francomoreira.github.io/projects/Palindrome-Checker/"><strong>Palindrome Checker</strong></a>
                     <a class="boton-links" href="https://francomoreira.github.io/projects/random-color/"><strong>Random color - Button</strong></a>
