--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Franco Moreira</title>
+    <title>Franco</title>
     <link rel="stylesheet" href="./styles/syle.css">
     <link rel="shortcut icon" href="./images/hidoggy-favicon.png" type="image/x-icon">
     <script src="./scripts/script.js"></script>
