--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                     <a class="boton-links" href="https://codepen.io/francomoreira/pen/QWmdvoE"><strong>Switch - Light & Dark</strong></a>
                     <a class="boton-links" href="https://francomoreira-35731.netlify.app/"><strong>Calculate your weight</strong></a>
                     <a class="boton-links" href="https://calculate-delay-time.netlify.app/"><strong>Delay tempo calculator</strong></a>
+                    <a class="boton-links" href="https://francomoreira.github.io/projects/API-rest-Random-Cat/"><strong>API Rest - Random Cats</strong></a>
                     <!--<a class="boton-links" href="#"><strong>exampler</strong></a> -->
                 </div>
                 <h2>Courses & Certificates 🚀</h2>
