[Error] reparando links rotos por cambio de dominios, y borre div de los certificados

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Franco</title>
+    <title>Mi Portfolio</title>
     <link rel="stylesheet" href="./styles/syle.css">
     <link rel="shortcut icon" href="./images/hidoggy-favicon.png" type="image/x-icon">
     <script src="./scripts/script.js"></script>
@@ -34,18 +34,17 @@
         <div class="container-links">
                 <h2>My Projects 🚀</h2> 
                 <div class="personal-projects-links"> 
-                    <a class="boton-links" href="https://francomoreira.github.io/projects/sticky-menu-fixed/"><strong>Sticky Menu</strong></a>
-                    <a class="boton-links" href="https://francomoreira.github.io/projects/Descarga-miniaturas-youtube/"><strong>YT Thumbnails Downloader</strong></a>
-                    <!--<a class="boton-links" href="https://francomoreira.github.io/projects/drive-markdown/"><strong>Drive to Markdown</strong></a>-->
-                    <a class="boton-links" href="https://francomoreira.github.io/projects/Palindrome-Checker/"><strong>Palindrome Checker</strong></a>
-                    <a class="boton-links" href="https://francomoreira.github.io/projects/random-color/"><strong>Random color - Button</strong></a>
+                    <a class="boton-links" href="./projects/sticky-menu-fixed/index.html"><strong>Sticky Menu</strong></a>
+                    <a class="boton-links" href="./projects/Descarga-miniaturas-youtube/index.html"><strong>YT Thumbnails Downloader</strong></a>
+                    <a class="boton-links" href="./projects/Palindrome-Checker/index.html"><strong>Palindrome Checker</strong></a>
+                    <a class="boton-links" href="./projects/random-color/"><strong>Random color - Button</strong></a>
+                    <a class="boton-links" href="./projects/API-rest-Random-Cat/"><strong>API Rest - Random Cats</strong></a>
                     <a class="boton-links" href="https://codepen.io/francomoreira/pen/QWmdvoE"><strong>Switch - Light & Dark</strong></a>
-                    <a class="boton-links" href="https://francomoreira-35731.netlify.app/"><strong>Calculate your weight</strong></a>
                     <a class="boton-links" href="https://calculate-delay-time.netlify.app/"><strong>Delay tempo calculator</strong></a>
-                    <a class="boton-links" href="https://francomoreira.github.io/projects/API-rest-Random-Cat/"><strong>API Rest - Random Cats</strong></a>
                     <!--<a class="boton-links" href="#"><strong>exampler</strong></a> -->
                 </div>
-                <h2>Courses & Certificates 🚀</h2>
+
+                <!-- <h2>Courses & Certificates 🚀</h2>
                 <div class="link-education">
                     <ul>
                         <li><a class="links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/1937-python/diploma/detalle/"><strong>Python: Básico</strong></a></li>               
@@ -57,7 +56,7 @@
                         <li><a class="links" rel="nofollow" href="https://platzi.com/p/FrancoMoreira/curso/2069-negocios-data-science/diploma/detalle/"><strong>Análisis de Negocios para Ciencia de Datos</strong></a></li>
                     </ul>
 
-                </div>
+                </div> -->
             </div>
         </div>
     </div> 
