Actualizar index.html Add boton flexwrap

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
                     <a class="boton-links" href="./projects/API-rest-Random-Cat/"><strong>API Rest - Random Cats</strong></a>
                     <a class="boton-links" href="https://codepen.io/francomoreira/pen/QWmdvoE"><strong>Switch - Light & Dark</strong></a>
                     <a class="boton-links" href="https://calculate-delay-time.netlify.app/"><strong>Delay tempo calculator</strong></a>
-                    <!--<a class="boton-links" href="#"><strong>exampler</strong></a> -->
-                </div>
+                    <a class="boton-links" href="https://codepen.io/francomoreira/pen/ZEqLZxV"><strong>Flex: Wrap;</strong></a>
+
+<!--<a class="boton-links" href="#"><strong>exampler</strong></a> -->                </div>
 
                 <!-- <h2>Courses & Certificates 🚀</h2>
                 <div class="link-education">
